# stm32f4-ucos-kernel

./: README.md
app/ledblink/: CMakeLists.txt  app.c  debug.h
app/ledblink/BSP/: bsp.c  bsp.h  bsp_int.c  lib_cfg.h  stm32f4_flash.ld
app/ledblink/DRV/: drv_board.c
app/ledblink/OS/: app_cfg.h
hw/STM32CubeF4/Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f407xx.h  stm32f4xx.h
hw/STM32CubeF4/Drivers/CMSIS/Include/: arm_common_tables.h  arm_const_structs.h
hw/STM32CubeF4/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_fmpi2c.h  stm32f4xx_hal_lptim.h  stm32f4xx_hal_uart.h  stm32f4xx_ll_fsmc.h
kernel/include/: drv_api.h  drv_errno.h  drv_gpio.h  drv_usart.h  fcntl.h  flag_event.h  lib_defines.h  mqueue.h  pthread.h  ringbuffer.h  semaphore.h  spidev.h  string.h  termios.h  time.h  unistd.h
kernel/include/sys/: reboot.h
kernel/src/: flag_event.c  lib_defines.c  mqueue.c  pthread.c  ringbuffer.c  semaphore.c  string.c  unistd.c
kernel/src/drv/: drv_core.c  drv_gpio.c  drv_spidev.c  drv_spidev_freertos.c  drv_usart.c
kernel/src/sys/: reboot.c
os/uCOS/uCOS-III/Source/: os_tick.c  os_tmr.c
